<resources>
    <string name="app_name">PNR Companion</string>
    <string name="GCash_image">GCash Logo</string>
    <string name="GrabPay_image">GrabPay Logo</string>
    <string name="PayPal_image">Paypal Logo</string>
    <string name="Visa_image">Visa Logo</string>
    <string name="BPI_image">BPI Logo</string>
    <string name="BancNet_image">BancNet Logo</string>
    <string name="UnionBank_image">UnionBank Logo</string>
    <string name="edit_account">Edit Account</string>
    <string name="username">Username</string>
    <string name="station">Station</string>
    <string name="schedule">Schedule</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="promos">Promos</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="services">Services</string>
    <string name="rewards">Rewards</string>
    <string name="add_account">Add Account</string>
    <string name="switch_account">Switch Account</string>
    <string name="log_out">Log Out</string>
    <string name="information">Information</string>
    <string name="navigation">Navigation</string>
    <string name="account">Account</string>
    <string name="code_here">CODE HERE</string>
    <string name="info_shit">info shit</string>
    <string name="title_activity_customer_service">CustomerServiceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cash_on_arrival">Cash on Arrival</string>
    <string name="pnr_companion">PNR Companion</string>
    <string name="pnr">PNR</string>
    <string name="all">ALL</string>
    <string name="food_and_beverages">FOOD AND BEVERAGES</string>
    <string name="discount">25% OFF DISCOUNT</string>
    <string name="free_ride">FREE RIDE</string>
    <string name="_1_jumbo_fries">1 JUMBO FRIES</string>
    <string name="buy_2_take_1">BUY 2   TAKE 1</string>
    <string name="redeem">REDEEM</string>
    <string name="records">Records</string>
    <string name="profile">Profile</string>
    <string name="Profile_Station">Station</string>
    <string name="Profile_Sch">sche</string>
    <string name="Profile_Profile">Profile</string>
    <string name="Profile_Records">Records</string>
    <string name="Profile_Schedule">Schedule</string>
    <string name="Profile_reward_balance">Reward Balance</string>
    <string name="Profile_remaining_balance">Remaining Balance</string>
    <string name="Profile_student_account">Student Account</string>
    <string name="Profile_reiner_gena">REINER GENA</string>
    <string name="Profile__25_18">25.18</string>
    <string name="Profile__1_203_09">₱ 1,203.09</string>
    <string name="Profile__wallet">E-Wallet</string>
    <string name="Profile_promos">Promos</string>
    <string name="Profile_service">Service</string>
    <string name="Profile_rewards">Rewards</string>
    <string name="button_rewards">button_rewards</string>
    <string name="button_promos">button_promos</string>
    <string name="button_station">button_station</string>
    <string name="button_ewaller">button_ewaller</string>
    <string name="button_records">button_records</string>
    <string name="btn_profile">btn_profile</string>
    <string name="Schedule_records">Records</string>
    <string name="Schedule_profile">Profile</string>
    <string name="Schedule_edsa_magallanes_station">EDSA MAGALLANES STATION</string>
    <string name="Schedule_schedule">SCHEDULE</string>
    <string name="Schedule_choose_a_station">CHOOSE A STATION</string>
    <string name="Schedule_tutuban_station">Tutuban Station</string>
    <string name="Schedule_laon_laan_station">Laon-Laan Station</string>
    <string name="Schedule_blumentritt_station">Blumentritt Station</string>
    <string name="Schedule_espana_station">Espana Station</string>
    <string name="Schedule_sta_mesa_station">Sta.Mesa Station</string>
    <string name="Schedule_pandacan_station">Pandacan Station</string>
    <string name="Schedule_vito_cruz_station">VITO CRUZ STATION</string>
    <string name="Schedule_profile2">Profile</string>
    <string name="Schedule_r2">Records</string>
    <string name="Schedule_alabang_station">Alabang Station</string>
    <string name="Schedule_sucat_station">Sucat Station</string>
    <string name="Schedule_bicutan_station">BICUTAN STATION</string>
    <string name="Schedule_fti_station">FTI Station</string>
    <string name="Schedule_nicols_station">Nicols Station</string>
    <string name="Schedule_pasay_road_station">Pasay Road Station</string>
    <string name="Schedule_ela_rosa_station">Dela Rosa Station</string>
    <string name="Schedule_san_andres_station">San Andres Station</string>
    <string name="Schedule_paco_station">Paco Station</string>
    <string name="REWARDS_rewards">REWARDS</string>
    <string name="other_promos">OTHER PROMOS</string>
    <string name="mcdonalds_starts_october_2022_november_2022">MCDONALDS: Starts October 2022 - November 2022</string>
    <string name="mmcdo">MCDONALDS: Starts October 2022 - November 2022</string>
    <string name="mcdo">MCDONALDS: Starts October 2022 - November 2022</string>
    <string name="mmmcdo">MCDONALDS: Starts October 2022 - November 2022</string>
    <string name="mmmmmdo">MCDONALDS: Starts October 2022 - November 2022</string>
    <string name="trending_promos">TRENDING PROMOS</string>
    <string name="_25_off_discount">25% OFF DISCOUNT</string>
    <string name="buy_2_take_11">BUY 2 TAKE 1</string>
    <string name="all_all">ALL</string>
    <string name="food_and_beverage">FOOD AND BEVERAGE</string>
    <string name="email_address_phone_number">Email Address / Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign-In</string>
    <string name="connect_with">Connect With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="email_address">Email Address</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_verification_code_to_your_email">We have sent verification code to your email.</string>
    <string name="insert_your_email_address_here">Insert your Email Address Here</string>
    <string name="enter_verification_code_here">Enter Verification Code Here</string>
    <string name="new_password">New Password</string>
    <string name="submit">SUBMIT</string>
    <string name="or">OR</string>
    <string name="send_code">SEND CODE</string>
    <string name="input_last_name">Input Last Name</string>
    <string name="insert_emaill_address">Insert Emaill Address</string>
    <string name="input_first_name">Input First Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="email_contact">Email Contact</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the Terms and Condition</string>
    <string name="i_agree_to_the_privacy_policy">I agree to the Privacy Policy</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="insert_phone_number">Insert Phone Number</string>
    <string name="student_account">Student Account</string>
    <string name="_25_18">25.18</string>
    <string name="_1_203_09">₱ 1,203.09</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="reiner_gena">REINER GENA</string>
    <string name="reward_balance">Reward Balance</string>
    <string name="announcements">ANNOUNCEMENTS</string>
    <string name="trending_rewards">TRENDING REWARDS</string>
    <string name="other_rewards">OTHER REWARDS</string>
    <string name="cash_back">CASH BACK</string>
    <string name="_20_discount_on_senior_citizens_and_students">20% DISCOUNT ON SENIOR CITIZENS AND STUDENTS</string>
    <string name="cash_back_starts_october_2022_november_2022">CASH BACK: STARTS OCTOBER 2022-NOVEMBER 2022</string>
    <string name="_20_sc_and_students_no_expiration">20% SC AND STUDENTS: NO EXPIRATION</string>
    <string name="sodexo_gift_cards_starts_january_2023">SODEXO GIFT CARDS: STARTS JANUARY 2023</string>
    <string name="pnr_relaunch_october_6_2022">PNR RELAUNCH: OCTOBER 6 2022</string>
    <string name="ticket_copy">Ticket Copy</string>
    <string name="receipt">Receipt</string>
    <string name="station_history">Station History</string>
    <string name="settings">Settings</string>
    <string name="_09049324564">09049324564</string>
    <string name="rtgena_gmail_com">rtgena@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="valid_governament_id">Valid Governament ID</string>
    <string name="account_type">Account Type</string>
    <string name="verification">VERIFICATION</string>
    <string name="verified_bank_wallet">Verified Bank Wallet</string>
    <string name="imageDescription">"Image Blue "</string>
</resources>