<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_3"
    android:fadeScrollbars="true"
    tools:context=".Schedule_Activity">

    <Button
        android:id="@+id/btn_profile3"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#FEEEEE"
        android:contentDescription="@string/btn_profile"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawableTint="@color/dark_blue"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rewards"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/btn_records3"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#FEEEEE"
        android:contentDescription="@string/button_records"
        android:drawableStart="@drawable/ic_baseline_newspaper_24"
        android:drawableTint="@color/dark_blue"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_services"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/txt_profile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Profile_Profile"
        android:textColor="@color/dark_blue"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_profile3"
        app:layout_constraintEnd_toEndOf="@+id/btn_profile3"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="@+id/btn_profile3"
        app:layout_constraintTop_toTopOf="@+id/btn_profile3" />

    <TextView
        android:id="@+id/txt_records2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Profile_Records"
        android:textColor="@color/dark_blue"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_records3"
        app:layout_constraintEnd_toEndOf="@+id/btn_records3"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="@+id/btn_records3"
        app:layout_constraintTop_toTopOf="@+id/btn_records3"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/txt_edsa"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center|center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Schedule_edsa_magallanes_station"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/txt_Schedule"
        android:layout_width="211dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/Schedule_schedule"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/txt_choose"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center|center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Schedule_choose_a_station"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="255dp"
        android:layout_height="176dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="36dp"
        android:animateLayoutChanges="false"
        app:layout_constraintBottom_toTopOf="@+id/txt_edsa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_tutuban"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_tutuban_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_laon"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_laon_laan_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_blumentrit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_blumentritt_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_espana"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_espana_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_stamesa"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_sta_mesa_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_pandacan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_pandacan_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_paco"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_paco_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_sanandres"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_san_andres_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_vito"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_vito_cruz_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_delarosa"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_ela_rosa_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_pasay"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_pasay_road_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_edsa"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg_white"
                android:fontFamily="@font/poppins_bold"
                android:shadowColor="#000000"
                android:text="EDSA Magallanes Station"
                android:textColor="@color/dark_blue"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_nicols"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_nicols_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_fti"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_fti_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_bicutan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_bicutan_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_sucat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_sucat_station"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_alabang"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Schedule_alabang_station"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>