<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004AAD">

    <ImageButton
        android:id="@+id/imageButton_GCash"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/GCash_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gcash" />

    <ImageButton
        android:id="@+id/imageButton_GrabPay"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#2196F3"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/GrabPay_image"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_COA"
        app:srcCompat="@drawable/grabpay"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton_Paypal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/PayPal_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_GCash"
        app:srcCompat="@drawable/paypal" />

    <ImageButton
        android:id="@+id/imageButton_BPI"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/BPI_image"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_GrabPay"
        app:srcCompat="@drawable/bpi" />

    <ImageButton
        android:id="@+id/imageButton_Unionbank"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/UnionBank_image"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_BPI"
        app:srcCompat="@drawable/unionbank"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton_Bancnet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/BancNet_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_Visa"
        app:srcCompat="@drawable/bancnet" />

    <ImageButton
        android:id="@+id/imageButton_Visa"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/Visa_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_Paypal"
        app:srcCompat="@drawable/mastercard" />

    <Button
        android:id="@+id/button_COA"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/cash_on_arrival"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>